--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "test": "npx jest --watchAll"
   },
   "author": "Lucas Matheus",
   "license": "MIT",
@@ -12,9 +13,15 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
+    "babel-jest": "^27.2.5",
+    "jest": "^27.2.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
